# ==============================================================================
# tuyul-example Global Directory Configuration
# ==============================================================================

# Register the specific TCP Server demonstration folder
add_subdirectory(tcp-server-example)
add_subdirectory(tcp-client-example)

# Future application layer examples will be registered here seamlessly:
# add_subdirectory(http-server-example)
# add_subdirectory(mqtt-broker-example)
